--- a/index.html
+++ b/index.html
@@ -1412,6 +1412,20 @@ if ('serviceWorker' in navigator) {
   });
 }
 })();
+
+<!-- JS Libraries -->
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+<!-- فایلێ داتایان ل ڤێرێ زێدە بکە -->
+<script src="data.js"></script>
+  
+<script>
+// ====================================================================================
+// ============================= پرۆژێ ئیسلام - JAVASCRIPT ============================
+// ====================================================================================
+(function() {
+'use strict';
+    
 </script>
 </body>
 </html>
