--- a/admin.html
+++ b/admin.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ku" dir="rtl">
 <head>
@@ -10,7 +11,7 @@
         .form-section { background-color: #161b22; border: 1px solid #30363d; border-radius: 8px; padding: 25px; margin-bottom: 30px; }
         .form-group { margin-bottom: 15px; }
         .form-group label { display: block; margin-bottom: 5px; font-weight: bold; }
-        .form-group input, .form-group select { width: 100%; background: #0d1117; border: 1px solid #30363d; color: #c9d1d9; padding: 10px; border-radius: 6px; box-sizing: border-box; }
+        .form-group input, .form-group select, .form-group textarea { width: 100%; background: #0d1117; border: 1px solid #30363d; color: #c9d1d9; padding: 10px; border-radius: 6px; box-sizing: border-box; }
         button { background-color: #2ea043; color: white; border: none; padding: 12px 20px; border-radius: 6px; cursor: pointer; font-size: 16px; font-weight: bold; }
         button:hover { opacity: 0.9; }
         #output-container { margin-top: 30px; }
@@ -52,12 +53,10 @@
             </div>
              <div class="form-group">
                 <label for="lec-videos">لینکێن ڤیدیۆیان (ھەر لینکەکێ ل ڕێزەکێ بنڤیسە)</label>
-                <textarea id="lec-videos" rows="5" style="width:100%; background: #0d1117; border: 1px solid #30363d; color: #c9d1d9; padding: 10px; border-radius: 6px; box-sizing: border-box;"></textarea>
+                <textarea id="lec-videos" rows="5"></textarea>
             </div>
             <button onclick="zêdekirinaWaneyê()">وانەیێ زێدە بکە</button>
         </div>
-
-        <!-- ل پاشەرۆژێ دشێی فورمێن دی بۆ پەرتووکان و فەتوایان ل ڤێرێ زێدە بکەی -->
 
         <!-- بەشێ نیشاندانا کۆدی -->
         <div id="output-container">
@@ -130,7 +129,6 @@
         // فەنکشن بۆ نیشاندانا کۆدێ نوو
         function nîşandanaKodaNû() {
             const outputElement = document.getElementById('output-code');
-            // ئەم ئۆبجێکتێ allData دکەینە سترینگەکا جوان (formatted string)
             const codeString = `let allData = ${JSON.stringify(allData, null, 4)};`;
             outputElement.value = codeString;
         }
