--- a/index.html
+++ b/index.html
@@ -682,10 +682,10 @@ audio::-webkit-media-controls-fullscreen-button { color: var(--primary-text); }
 // === [ 1. Firebase Configuration ] ===
 // **گرنگ:** ڤان زانیاریان ژ پڕۆژێ خۆ یێ Firebase بینە
 const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
+    apiKey: "AIzaSyDDi3HtFigGy3qFpFVhSATal3yzm7Z_dZA",
     authDomain: "YOUR_AUTH_DOMAIN",
     databaseURL: "YOUR_DATABASE_URL", // گرنگە!
-    projectId: "YOUR_PROJECT_ID",
+    projectId: "projeislam",
     storageBucket: "YOUR_STORAGE_BUCKET",
     messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
     appId: "YOUR_APP_ID"
