--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ audio::-webkit-media-controls-fullscreen-button { color: var(--primary-text); }
 const firebaseConfig = {
     apiKey: "AIzaSyDDi3HtFigGy3qFpFVhSATal3yzm7Z_dZA",
     authDomain: "YOUR_AUTH_DOMAIN",
-    databaseURL: "YOUR_DATABASE_URL", // گرنگە!
+    databaseURL: "projeislam.firebaseapp.com", // گرنگە!
     projectId: "projeislam",
     storageBucket: "YOUR_STORAGE_BUCKET",
     messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
