--- a/index.html
+++ b/index.html
@@ -683,12 +683,13 @@ audio::-webkit-media-controls-fullscreen-button { color: var(--primary-text); }
 // **گرنگ:** ڤان زانیاریان ژ پڕۆژێ خۆ یێ Firebase بینە
 const firebaseConfig = {
     apiKey: "AIzaSyDDi3HtFigGy3qFpFVhSATal3yzm7Z_dZA",
-    authDomain: "YOUR_AUTH_DOMAIN",
-    databaseURL: "projeislam.firebaseapp.com", // گرنگە!
-    projectId: "projeislam",
-    storageBucket: "YOUR_STORAGE_BUCKET",
-    messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-    appId: "YOUR_APP_ID"
+  authDomain: "projeislam.firebaseapp.com",
+  projectId: "projeislam",
+  storageBucket: "projeislam.firebasestorage.app",
+  messagingSenderId: "686343038831",
+  appId: "1:686343038831:web:745161e7543b53aa0b6a9a",
+  measurementId: "G-40PLKXX7GK"
+};
 };
 
 // Initialize Firebase
