--- a/admin.html
+++ b/admin.html
@@ -226,12 +226,12 @@
     // ## گرنگ: پێزانینێن پرۆژەیێ خۆ یێ فایەربەیس ل ڤێرێ داخل بکە (هەمان یێن مالپەرێ سەرەکی)  ##
     // #######################################################################################
     const firebaseConfig = {
-        apiKey: "AIzaSy...YOUR_API_KEY", // ل ڤێرێ داخل بکە
-        authDomain: "your-project-id.firebaseapp.com", // ل ڤێرێ داخل بکە
-        projectId: "your-project-id", // ل ڤێرێ داخل بکە
-        storageBucket: "your-project-id.appspot.com", // ل ڤێرێ داخل بکە
-        messagingSenderId: "1234567890", // ل ڤێرێ داخل بکە
-        appId: "1:1234567890:web:abcdef123456" // ل ڤێرێ داخل بکە
+        apiKey: "AIzaSyDDi3HtFigGy3qFpFVhSATal3yzm7Z_dZA", // ل ڤێرێ داخل بکە
+        authDomain: "projeislam.firebaseapp.com", // ل ڤێرێ داخل بکە
+        projectId: "projeislam", // ل ڤێرێ داخل بکە
+        storageBucket: "projeislam.firebasestorage.app", // ل ڤێرێ داخل بکە
+        messagingSenderId: "686343038831", // ل ڤێرێ داخل بکە
+        appId: "1:686343038831:web:745161e7543b53aa0b6a9a" // ل ڤێرێ داخل بکە
     };
 
     firebase.initializeApp(firebaseConfig);
